--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="container">
             <!-- Item Gorengan 1 -->
             <div class="item">
-                <img src="images/tahu.jpeg" alt="Gambar Tahu" width="300" height="200">
+                <img src="tahu.jpeg" alt="Gambar Tahu" width="300" height="200">
                 <div class="item-content">
                     <h2>iya</h2>
                     <p>Setiap Gigitan mampu menenangkan jiwa yang sedang merindukan kehadiran seseorang.</p>
@@ -195,7 +195,7 @@
 
             <!-- Item Gorengan 2 -->
             <div class="item">
-                <img src="images/bakwan.jpeg" alt="Gambar Bakwan" width="300" height="200">
+                <img src="bakwan.jpeg" alt="Gambar Bakwan" width="300" height="200">
                 <div class="item-content">
                     <h2>Oo gitu</h2>
                     <p>Oo gitu bisa menjadi teman terbaik saat kita merindukan seseorang yang telah pergi.</p>
@@ -209,7 +209,7 @@
 
             <!-- Item Gorengan 3 -->
             <div class="item">
-                <img src="images/pisang.jpeg" alt="Gambar Pisang" width="300" height="200">
+                <img src="pisang.jpeg" alt="Gambar Pisang" width="300" height="200">
                 <div class="item-content">
                     <h2>Terserah</h2>
                     <p>Terserah bisa menjadi pilihan tepat untuk meredakan kesedihan hati.</p>
